--- a/thesis/bibliography.tex
+++ b/thesis/bibliography.tex
@@ -1,3 +1,5 @@
+\listoffigures
+
 \begin{thebibliography}{10}
     \bibitem{trudnosc} \url{https://www.researchgate.net/publication/291331282_The_International_Classification_of_Headache_Disorders_3rd_edition_beta_version}
     \bibitem{ehf} \url{https://www.ehf-headache.com/}
@@ -17,4 +19,5 @@
     \bibitem{tensorflow_paper} \url{https://zenodo.org/records/10798587}
     \bibitem{wyklad} Materiały wykładowe przedmiotu.
     \bibitem{svm_wiki} \url{https://pl.wikipedia.org/wiki/Maszyna_wektor%C3%B3w_no%C5%9Bnych}
+    \bibitem{lime} \url{https://christophm.github.io/interpretable-ml-book/lime.html}
 \end{thebibliography}
