--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -8,6 +8,7 @@
 \usepackage{amssymb}
 \usepackage{listings}
 \usepackage{xcolor}
+\usepackage{float}
 
 \include{codestyle}
 
@@ -15,7 +16,6 @@
 \include{01_titlepage}
 \newpage
 \tableofcontents
-\listoffigures
 \newpage
 
 \include{02_introduction}
