--- a/thesis/bibliography.tex
+++ b/thesis/bibliography.tex
@@ -20,4 +20,5 @@
     \bibitem{wyklad} Materiały wykładowe przedmiotu.
     \bibitem{svm_wiki} \url{https://pl.wikipedia.org/wiki/Maszyna_wektor%C3%B3w_no%C5%9Bnych}
     \bibitem{lime} \url{https://christophm.github.io/interpretable-ml-book/lime.html}
+    \bibitem{shap} \url{https://christophm.github.io/interpretable-ml-book/shap.html}
 \end{thebibliography}
